# dev-environment

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_SCHEDULE.md  docker-compose.yml  init-project.sh  version.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.md  config.yml
.github/actions/branch-check/: action.yml
.github/actions/cache-cleanup/: action.yml
.github/actions/check-branch/: action.yml
.github/actions/check-distribution-status/: action.yml
.github/actions/check-manual-inputs/: action.yml
.github/actions/check-optional-jobs/: action.yml
.github/actions/check-pr-status/: action.yml
.github/actions/cleanup-on-failure/: action.yml
.github/actions/create-deploy-summary/: action.yml
.github/actions/create-release/: action.yml
.github/actions/debug-merge-info/: action.yml
.github/actions/detect-changes/: action.yml
.github/actions/determine-version/: action.yml
.github/actions/direct-download/: action.yml
.github/actions/direct-download-build/: action.yml
.github/actions/dockerhub/: action.yml
.github/actions/dockerhub-build/: action.yml
.github/actions/dockerhub-cleanup/: action.yml
.github/actions/e2e-tests/: action.yml
.github/actions/handle-release-failure/: action.yml
.github/actions/initialize-labels/: action.yml
.github/actions/manage-release-queue/: action.yml
.github/actions/notify-queue/: action.yml
.github/actions/notify-release-status/: action.yml
.github/actions/process-release-queue/: action.yml
.github/actions/process-release-queue-job/: action.yml
.github/actions/queue-release/: action.yml
.github/actions/queue-state-update/: action.yml
.github/actions/release-artifacts/: action.yml
.github/actions/security-scan/: action.yml
.github/actions/set-release-info/: action.yml
.github/actions/setup-docker/: action.yml
.github/actions/setup-git-signing/: action.yml
.github/actions/trigger-release-workflow/: action.yml
.github/actions/update-docker-tags/: action.yml
.github/actions/validate-branch/: action.yml
.github/actions/validate-release-conditions/: action.yml
.github/actions/validate-tag/: action.yml
.github/actions/version-determiner/: action.yml
.github/codeql/: codeql-config.yml
.github/scripts/: Cargo.toml
.github/scripts/.github/release_queue/: beta.json  main.json
.github/scripts/src/: github.rs  lib.rs  logger.rs
.github/workflows/: README.md  bittorrent-build-and-seed.disable  bittorrent-build-and-seed.yml  build-and-push.yml  cache-cleanup.yml  create-release.disable  create-release.yml  create_release.yml  distribution.yml  dockerhub-build-and-push.disable  dockerhub-build-and-push.yml  e2e-integration-test.yml  job_cleanup_on_failure.yml  job_create_release.yml  job_detect_changes.yml  job_direct_download_build.yml  job_dockerhub_build.yml  job_e2e_tests.yml  job_release_artifacts.yml  job_security_scan.yml  job_setup_docker.yml  job_validate_branch.yml  workflow-test.yml  workflow_cache_cleanup.yml  workflow_cleanup_dockerhub.yml  workflow_create_release.yml  workflow_distribution.yml  workflow_release_queue.yml
.github/workflows/scripts/: workflow-test.yml
.github/workflows/templates/: dockerhub-build-and-push.yml  e2e-integration-test.yml
distributions/bittorrent/: Dockerfile  README.md  docker-compose.yml  magnet.txt
distributions/bittorrent/e2e/scripts/: test.sh
distributions/bittorrent/scripts/release/: create-release.sh  update-repo.sh
distributions/bittorrent/scripts/seeding/: setup-persistent.sh
distributions/bittorrent/scripts/torrent/: create-torrent.sh  generate-magnet.sh
distributions/bittorrent/scripts/utils/: verify.sh
distributions/direct_download/scripts/: build.sh
distributions/dockerhub/: Dockerfile  Dockerfile.template  README.md  docker-compose.yml
distributions/dockerhub/e2e/scripts/: test.sh
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  E2E_TESTS.md  FAQ.md  FEATURES.md  MILESTONES.md  QUICK_START.md  README.md  RELEASE_SCHEDULE.md  REQUIREMENTS.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  VISUALS.md  WORKFLOWS.md
docs/QUICK_START/: BITTORRENT.md  DIRECT_DOWNLOAD.md  DOCKERHUB.md  README.md
e2e/: Cargo.toml  README.md
e2e/src/: lib.rs  main.rs
e2e/src/cli/: mod.rs
e2e/src/common/: env.rs  mod.rs
e2e/src/distribution/: mod.rs  switching.rs
e2e/src/ide/: mod.rs
e2e/src/logging/: mod.rs
e2e/src/startup/: mod.rs
e2e/src/test_runner/: mod.rs
e2e/src/workflows/: user.rs
projects/: bashrc.md  gitconfig.md
scripts/: cleanup-workflow-runs.bat  cleanup-workflow-runs.sh  generate-dockerfile.sh
src/: main.rs
startup/: init-project.sh  setup.sh  start-dev.sh
startup/e2e/scripts/: test-distribution-switch.sh
startup/lib/: distribution.sh
startup/templates/workflows/: backend-ci.yml  frontend-ci.yml
templates/workflows/: backend-ci.yml  build-and-push.yml  frontend-ci.yml
