[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
which = "4.4"
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3"
octocrab = "0.32"
log = "0.4"
futures = "0.3"

[workspace]
members = ["."]