[package]
name = "github-workflow-scripts"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "step-check-workflow-states"
path = "src/bin/step_check_workflow_states.rs"

[[bin]]
name = "step-check-artifacts"
path = "src/bin/step_check_artifacts.rs"

[[bin]]
name = "step-check-base-image"
path = "src/bin/step_check_base_image.rs"

[[bin]]
name = "step-setup-docker-env"
path = "src/bin/step_setup_docker_env.rs"

[[bin]]
name = "step-build-image"
path = "src/bin/step_build_image.rs"

[[bin]]
name = "step-verify-docker-image"
path = "src/bin/step_verify_docker_image.rs"

[[bin]]
name = "step-validate-version"
path = "src/bin/step_validate_version.rs"

[[bin]]
name = "step-package-assets"
path = "src/bin/step_package_assets.rs"

[[bin]]
name = "step-configure-git"
path = "src/bin/step_configure_git.rs"

[[bin]]
name = "step-update-docs"
path = "src/bin/step_update_docs.rs"

[[bin]]
name = "step-debug-inputs"
path = "src/bin/step_debug_inputs.rs"

[[bin]]
name = "step-create-release"
path = "src/bin/step_create_release.rs"

[[bin]]
name = "step-cache-cleanup"
path = "src/bin/step_cache_cleanup.rs"

[dependencies]
anyhow = "1.0"
octocrab = "0.31"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"
chrono = "0.4"
sha2 = "0.10"
base64 = "0.21"
